# RustGuardianLegendRando

./: .gitignore  404.html  Cargo.toml  index.html
.github/workflows/: deploy-on-merge.yml  github-action.yml
assets/dioxus/: rando.js  rando.js.br  rando_bg.wasm  rando_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-2a9fdcda6a4621ea/: inline0.js  (+1 more)
dev_cli/: Cargo.toml
dev_cli/src/: main.rs
src/: config.rs  helpers.rs  main.rs  patcher.rs  qol_hacks.rs  seed.rs
src/colors/: mod.rs  patch_themes.rs
src/corridor/: mod.rs  shuffle_bosses.rs  shuffle_corridors.rs  shuffle_ground.rs  shuffle_skies.rs
src/maze/: area_division.rs  generator.rs  map.rs  mod.rs  room.rs  shuffle_minibosses.rs
src/maze/items/: item_generator.rs  item_library.rs  mod.rs  secret_library.rs
src/rebalance/: entity.rs  health.rs  mod.rs
tgl_rando_core/: Cargo.toml
tgl_rando_core/src/: config.rs  helpers.rs  lib.rs  music.rs  patcher.rs  qol_hacks.rs  seed.rs  tgl_error.rs
tgl_rando_core/src/colors/: patch_themes.rs
tgl_rando_core/src/corridor/: mod.rs  shuffle_bosses.rs  shuffle_corridors.rs  shuffle_ground.rs  shuffle_skies.rs
tgl_rando_core/src/logging/: mod.rs  split_map.rs
tgl_rando_core/src/maze/: area_division.rs  generator.rs  map.rs  room.rs  shuffle_minibosses.rs
tgl_rando_core/src/rebalance/: damage.rs  entity.rs  mod.rs
web_gui/: Cargo.toml  Dioxus.toml  flake.nix  index.html
web_gui/src/: boss_config.rs  color_config.rs  corridor_config.rs  gui_error.rs  header.rs  hue_config.rs  item_config.rs  main.rs  map_config.rs  music_config.rs  qol_hacks.rs
(+5 files in other folders)
