[package]
name = "tglmaprust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3", features = [] }
rand = "0.8.5"
chrono = "0.4.31"
im = "15.1.0"
rand_chacha = "0.3.1"
rand_seeder = "0.2.3"
ndarray = "0.15.6"
